--- a/templates/item/trait-sheet.html
+++ b/templates/item/trait-sheet.html
@@ -16,7 +16,7 @@
                     </select>
                 </div>
                 <div class="flexrow">
-                    <label class="resource-label">Level</label>
+                    <label class="resource-label">Roll (If Applicable)</label>
                     <input type="text" name="data.level" value="{{data.level}}" data-dtype="Number"/>
                 </div>
                 <div class="flexrow">
