--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -237,7 +237,7 @@
 				<ol class="items-list">
 					<li class="item flexrow item-header">
 						<div class="item-image"></div>
-						<div class="item-name">Name</div>
+						<div class="item-name">Skill</div>
 						<div class="item-notes">Notes</div>
 						<div class="item-points">Points</div>
 						<div class="item-rolls">Skill</div>
@@ -246,9 +246,52 @@
 						</div>
 					</li>
 					{{#each actor.items as |item id|}}
-					{{#if (or (eq type "Rollable")) }}
+					{{#if (and (eq type "Rollable") (eq data.category "skill")) }}
 					<li class="item flexrow" data-item-id="{{item._id}}">
-						<div class="item-image"><img src="{{item.img}}" title="{{item.name}}" width="24" height="24" /></div>
+						<div class="item-image">
+							<img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
+						</div>
+						<div class="item-name">
+							{{item.name}}
+						</div>
+						<div class="item-notes">
+							{{data.notes}}
+						</div>
+						<div class="item-points">
+							<div class="item-notes">
+								{{data.points}}
+							</div>
+						</div>
+						<div class="item-skill">
+							<label for="data.level" class="fa fa-dice-six rollable" data-level="{{data.level}}"
+								   data-label="Makes a &lt;b&gt;{{name}}&lt;/b&gt; roll." data-type="skill"></label>
+							{{data.level}}
+						</div>
+						<div class="item-controls">
+							<a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+							<a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+						</div>
+					</li>
+					{{/if}}
+					{{/each}}
+				</ol>
+				<ol class="items-list">
+					<li class="item flexrow item-header">
+						<div class="item-image"></div>
+						<div class="item-name">Technique</div>
+						<div class="item-notes">Notes</div>
+						<div class="item-points">Points</div>
+						<div class="item-rolls">Skill</div>
+						<div class="item-controls">
+							<!--<a class="item-control item-create" title="Create item" data-type="item"><i class="fas fa-plus"></i> Add</a>-->
+						</div>
+					</li>
+					{{#each actor.items as |item id|}}
+					{{#if (and (eq type "Rollable") (eq data.category "technique")) }}
+					<li class="item flexrow" data-item-id="{{item._id}}">
+						<div class="item-image">
+							<img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
+						</div>
 						<div class="item-name">
 							{{item.name}}
 						</div>
