--- a/gurps4e.css
+++ b/gurps4e.css
@@ -31,6 +31,68 @@
 	grid-gap: 5px;
 }
 
+#equipmentDetails {
+	grid-area: equipmentDetails;
+	display: grid;
+	grid-template:
+			"qty tl lc equipped"
+			"value value weight weight";
+	grid-template-columns: 1fr 1fr 1fr 1fr;
+	/*grid-template-rows: 55px 50px;*/
+	grid-gap: 5px;
+}
+
+.equipStatusSelect{
+	background: rgba(0, 0, 0, 0.05);
+	border: 1px solid #7a7971;
+	border-radius: 3px;
+	padding: 0 3px;
+	text-overflow: ellipsis;
+	height: unset;
+}
+
+.equipmentStat{
+	display: grid;
+	grid-template-columns: auto 1fr 1fr;
+}
+
+.equipmentStatLong{
+	display: grid;
+	grid-template-columns: auto 1fr auto 1fr;
+}
+
+.meleeRow {
+	display: grid;
+	grid-template-columns: 4fr 1fr 4fr 4fr 4fr 4fr 4fr 4fr 4fr 1fr;
+	border: 1px solid rgba(0, 0, 0, 0.05);
+}
+
+#qty {
+	grid-area: qty;
+}
+
+#tl {
+	grid-area: tl;
+}
+
+#lc {
+	grid-area: lc;
+}
+
+#equipped {
+	grid-area: equipped;
+}
+
+#value {
+	grid-area: value;
+}
+
+#weight {
+	grid-area: weight;
+}
+
+
+
 #baseSkillRow {
 	grid-area: baseSkillRow;
 	display: grid;
