--- a/gurps4e.css
+++ b/gurps4e.css
@@ -61,10 +61,32 @@
 	grid-template-columns: auto 1fr auto 1fr;
 }
 
+.equipmentInputInput{
+	display: grid;
+	grid-template-columns: 3fr auto 1fr;
+}
+
+.equipmentLabelInput{
+	display: grid;
+	grid-template-columns: 1fr auto 1fr;
+}
+
 .meleeRow {
 	display: grid;
-	grid-template-columns: 4fr 1fr 4fr 4fr 4fr 4fr 4fr 4fr 4fr 1fr;
+	grid-template-columns: 1fr 5fr 1fr 5fr 3fr 3fr 1.5fr 1.5fr 1fr 1fr 1fr 0.5fr;
 	border: 1px solid rgba(0, 0, 0, 0.05);
+	grid-gap: 5px;
+	align-content: center;
+	text-align: center;
+}
+
+.rangedRow {
+	display: grid;
+	grid-template-columns: 1fr 5fr 1fr 5fr 1fr 3fr 1.5fr 1.5fr 3fr 1fr 1fr 1fr 1fr 1fr 0.5fr;
+	border: 1px solid rgba(0, 0, 0, 0.05);
+	grid-gap: 5px;
+	align-content: center;
+	text-align: center;
 }
 
 #qty {
