--- a/templates/item/equipment-sheet.html
+++ b/templates/item/equipment-sheet.html
@@ -69,9 +69,10 @@
         {{!-- Melee Tab --}}
         <div class="tab stats" data-tab="melee" data-group="primary">
             <hr>
-            <h3>Add Row</h3>
+            <h3 class="addRow" style="text-align: right;">Add Row</h3>
             <div class="tab">
                 <div class="meleeRow">
+                    <label class="resource-label">ID</label>
                     <label class="resource-label">Name</label>
                     <label class="resource-label">Level</label>
                     <label class="resource-label">Skill Name / Mod</label>
@@ -85,27 +86,27 @@
                 </div>
                 {{#each data.melee as |melee id|}}
                 <div class="meleeRow">
-                    {{log melee level="error"}}
-                    {{log id level="error"}}
-                    <input type="text" value="{{name}}" title="{{name}}" style="text-align:left;" />
+                    <label class="resource-label">{{id}}</label>
+                    <input type="text" name="data.melee.{{id}}.name" value="{{name}}" title="{{name}}" style="text-align:left;" />
                     <label class="resource-label">{{melee.level}}</label>
-                    <div>
-                        <input type="text" value="{{melee.skill}}" title="{{melee.skill}}" style="text-align:left;" />
-                        <input type="text" name="melee.skillMod" value="{{melee.skillMod}}" data-dtype="Number"/>
+                    <div class="equipmentInputInput">
+                        <input type="text" name="data.melee.{{id}}.skill" value="{{melee.skill}}" title="{{melee.skill}}" style="text-align:left;" />/
+                        <input type="text" name="data.melee.{{id}}.skillMod" value="{{melee.skillMod}}" data-dtype="Number"/>
                     </div>
-                    <div>
-                        <label class="resource-label">{{melee.parry}}</label>
-                        <input type="text" name="melee.parryMod" value="{{melee.parryMod}}" data-dtype="Number"/>
+                    <div class="equipmentLabelInput">
+                        <label class="resource-label">{{melee.parry}}</label>/
+                        <input type="text" name="data.melee.{{id}}.parryMod" value="{{melee.parryMod}}" data-dtype="Number"/>
                     </div>
-                    <div>
-                        <label class="resource-label">{{melee.block}}</label>
-                        <input type="text" name="melee.blockMod" value="{{melee.blockMod}}" data-dtype="Number"/>
+                    <div class="equipmentLabelInput">
+                        <label class="resource-label">{{melee.block}}</label>/
+                        <input type="text" name="data.melee.{{id}}.blockMod" value="{{melee.blockMod}}" data-dtype="Number"/>
                     </div>
-                    <input type="text" value="{{melee.damage}}" title="{{melee.damage}}" style="text-align:left;" />
-                    <input type="text" value="{{melee.damageType}}" title="{{melee.damageType}}" style="text-align:left;" />
-                    <input type="text" value="{{melee.armorDivisor}}" title="{{melee.armorDivisor}}" style="text-align:left;" />
-                    <input type="text" value="{{melee.reach}}" title="{{melee.reach}}" style="text-align:left;" />
-                    <input type="text" name="melee.st" value="{{melee.st}}" data-dtype="Number"/>
+                    <input type="text" name="data.melee.{{id}}.damage" value="{{melee.damage}}" title="{{melee.damage}}" style="text-align:left;" />
+                    <input type="text" name="data.melee.{{id}}.damageType" value="{{melee.damageType}}" title="{{melee.damageType}}" style="text-align:left;" />
+                    <input type="text" name="data.melee.{{id}}.armorDivisor" value="{{melee.armorDivisor}}" title="{{melee.armorDivisor}}" style="text-align:left;" />
+                    <input type="text" name="data.melee.{{id}}.reach" value="{{melee.reach}}" title="{{melee.reach}}" style="text-align:left;" />
+                    <input type="text" name="data.melee.{{id}}.st" value="{{melee.st}}" data-dtype="Number"/>
+                    <a class="attack-delete" id="meleee{{id}}" title="Delete Item"><i class="fas fa-trash"></i></a>
                 </div>
                 {{/each}}
             </div>
@@ -114,11 +115,46 @@
         {{!-- Ranged Tab --}}
         <div class="tab stats" data-tab="ranged" data-group="primary">
             <hr>
-            <h3>Notes</h3>
+            <h3 class="addRangedRow" style="text-align: right;">Add Row</h3>
             <div class="tab">
-                <textarea rows="8" name="data.ra">{{{data.ra}}}</textarea>
+                <div class="rangedRow">
+                    <label class="resource-label">ID</label>
+                    <label class="resource-label">Name</label>
+                    <label class="resource-label">Level</label>
+                    <label class="resource-label">Skill Name / Mod</label>
+                    <label class="resource-label">Acc</label>
+                    <label class="resource-label">Damage</label>
+                    <label class="resource-label">Type</label>
+                    <label class="resource-label">Divisor</label>
+                    <label class="resource-label">Range</label>
+                    <label class="resource-label">Rof</label>
+                    <label class="resource-label">Shots</label>
+                    <label class="resource-label">Bulk</label>
+                    <label class="resource-label">Rcl</label>
+                    <label class="resource-label">ST</label>
+                </div>
+                {{#each data.ranged as |ranged id|}}
+                <div class="rangedRow">
+                    <label class="resource-label">{{id}}</label>
+                    <input type="text" name="data.ranged.{{id}}.name" value="{{name}}" title="{{name}}" style="text-align:left;" />
+                    <label class="resource-label">{{ranged.level}}</label>
+                    <div class="equipmentInputInput">
+                        <input type="text" name="data.ranged.{{id}}.skill" value="{{ranged.skill}}" title="{{ranged.skill}}" style="text-align:left;" />/
+                        <input type="text" name="data.ranged.{{id}}.skillMod" value="{{ranged.skillMod}}" data-dtype="Number"/>
+                    </div>
+                    <input type="text" name="data.ranged.{{id}}.acc" value="{{ranged.acc}}" data-dtype="Number"/>
+                    <input type="text" name="data.ranged.{{id}}.damage" value="{{ranged.damage}}" title="{{ranged.damage}}" style="text-align:left;" />
+                    <input type="text" name="data.ranged.{{id}}.damageType" value="{{ranged.damageType}}" title="{{ranged.damageType}}" style="text-align:left;" />
+                    <input type="text" name="data.ranged.{{id}}.armorDivisor" value="{{ranged.armorDivisor}}" title="{{ranged.armorDivisor}}" style="text-align:left;" />
+                    <input type="text" name="data.ranged.{{id}}.range" value="{{ranged.range}}" title="{{ranged.range}}" style="text-align:left;" />
+                    <input type="text" name="data.ranged.{{id}}.rof" value="{{ranged.rof}}" title="{{ranged.rof}}" style="text-align:left;" />
+                    <input type="text" name="data.ranged.{{id}}.shots" value="{{ranged.shots}}" title="{{ranged.shots}}" style="text-align:left;" />
+                    <input type="text" name="data.ranged.{{id}}.bulk" value="{{ranged.bulk}}" title="{{ranged.bulk}}" style="text-align:left;" />
+                    <input type="text" name="data.ranged.{{id}}.rcl" value="{{ranged.rcl}}" title="{{ranged.rcl}}" style="text-align:left;" />
+                    <input type="text" name="data.ranged.{{id}}.st" value="{{ranged.st}}" data-dtype="Number"/>
+                    <a class="ranged-delete" id="ranged{{id}}" title="Delete Item"><i class="fas fa-trash"></i></a>
+                </div>
+                {{/each}}
             </div>
-        </div>
-
     </section>
 </form>
