--- a/gurps4e.css
+++ b/gurps4e.css
@@ -31,6 +31,16 @@
 	grid-gap: 5px;
 }
 
+.item-row {
+	display: grid;
+	grid-template-columns: 24px 4fr 4fr 1fr 1fr 1fr 1fr 1fr 2fr 1fr;
+}
+
+.item-row div {
+	display: flex;
+	align-items: center;
+}
+
 #equipmentDetails {
 	grid-area: equipmentDetails;
 	display: grid;
