--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -413,48 +413,32 @@
 				</div>
 				{{!-- List of Items --}}
 				<ol class="items-list">
-					<li class="item flexrow item-header">
+					<li class="item-row bold">
 						<div class="item-image"></div>
 						<div class="item-name">Name</div>
 						<div class="item-notes">Notes</div>
-						<div class="item-rolls">Skill - - Damage - - ArmDiv</div>
+						<div class="item-title">TL</div>
+						<div class="item-title">LC</div>
+						<div class="item-title">Qty</div>
+						<div class="item-title">lbs</div>
+						<div class="item-title">$</div>
+						<div class="item-title">Status</div>
 						<div class="item-controls">
 							<!--<a class="item-control item-create" title="Create item" data-type="item"><i class="fas fa-plus"></i> Add</a>-->
 						</div>
 					</li>
 					{{#each actor.items as |item id|}}
 					{{#if (eq type "Equipment") }}
-					<li class="item flexrow" data-item-id="{{item._id}}">
+					<li class="item-row item" data-item-id="{{item._id}}">
 						<div class="item-image"><img src="{{item.img}}" title="{{item.name}}" width="24" height="24" /></div>
-						<div class="item-name">
-							<input type="text" value="{{item.name}}" title="{{item.name}}" style="text-align:left;" />
-						</div>
-						<div class="item-notes">
-							<input type="text" value="{{data.notes}}" title="{{data.notes}}" style="text-align:left;" />
-						</div>
-						{{#if (ne data.level undefined)}}
-						{{#if (or (eq type "Melee-Attack") (eq type "Ranged-Attack") ) }}
-						<div class="item-attack">
-							<label for="data.level" class="fa fa-dice-six rollable" data-level="{{data.level}}"
-										 data-label="Attacks with &lt;b&gt;{{name}}&lt;/b&gt;." data-type="skill"></label>
-							{{data.level}} -
-							- <label for="data.damage" class="fa fa-dice-six rollable" data-roll="{{data.damage}}"
-											 data-label="Rolls &lt;b&gt;{{data.damageType}}&lt;/b&gt; damage for &lt;b&gt;{{name}}&lt;/b&gt;."
-											 data-type="damage"></label>
-							{{data.damage}}
-							<label>{{data.damageType}} -</label>
-							<label>- /{{data.armourDiv}}</label>
-						</div>
-						{{else}}
-						<div class="item-skill">
-							<label for="data.level" class="fa fa-dice-six rollable" data-level="{{data.level}}"
-										 data-label="Makes a &lt;b&gt;{{name}}&lt;/b&gt; roll." data-type="skill"></label>
-							{{data.level}}
-						</div>
-						{{/if}}
-						{{else}}
-						<div></div>
-						{{/if}}
+						<div class="item-name"><span>{{item.name}}</span></div>
+						<div class="item-notes"><span>{{data.notes}}</span></div>
+						<div><span>{{data.tl}}</span></div>
+						<div><span>{{data.lc}}</span></div>
+						<div><span>{{data.quantity}}</span></div>
+						<div><span>{{data.ttlCost}}</span></div>
+						<div><span>{{data.ttlWeight}}</span></div>
+						<div><span>{{data.equipStatus}}</span></div>
 						<div class="item-controls">
 							<a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
 							<a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
@@ -465,4 +449,5 @@
 				</ol>
 			</div>
 		</section>
+	</div>
 </form>
