Displaying total cost and weight

--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -446,6 +446,20 @@
 					</li>
 					{{/if}}
 					{{/each}}
+
+					<li class="item-row item">
+						<div class="item-image"></div>
+						<div class="item-name"><span></span></div>
+						<div class="item-notes"><span></span></div>
+						<div><span></span></div>
+						<div><span></span></div>
+						<div><span>Total:</span></div>
+						<div><span>{{data.ttlCost}}</span></div>
+						<div><span>{{data.ttlWeight}}</span></div>
+						<div><span></span></div>
+						<div class="item-controls"></div>
+					</li>
+
 				</ol>
 			</div>
 		</section>
