Better labeling for SM/TL Fixed <hr> on equipment sheet

--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -27,8 +27,10 @@
                     </div>
                     <div>
                         <div class="bold label right">
+							<span>SM:</span>
                             <input type="text" name="data.bio.sm.value"
-                                   value="{{data.bio.sm.value}}" placeholder="Size Mod" />
+                                   value="{{data.bio.sm.value}}" placeholder="Size Mod"
+								   style="width: 80%;"/>
                         </div>
                     </div>
                     <div>
@@ -45,12 +47,14 @@
                     </div>
                     <div>
                         <div class="bold label right">
+							<span>TL:</span>
                             <input type="text" name="data.bio.tl.value"
                                    value="{{data.bio.tl.value}}" placeholder="TL"
-                                   style="width: 49%;"/>
+                                   style="width: 40%;"/>
+							<span>Pts:</span>
                             <input type="text" name="data.bio.tl.points"
                                    value="{{data.bio.tl.points}}" placeholder="points"
-                                   style="width: 49%;"/>
+                                   style="width: 40%;"/>
                         </div>
                     </div>
 				</div>
