--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -342,79 +342,38 @@
 						{{/each}}
 					</table>
 				</div>
-				<ol class="items-list">
-					<li class="item flexrow item-header">
-						<div class="item-image"></div>
-						<div class="item-name">Name</div>
-						<div class="item-notes">Notes</div>
-						<div class="item-rolls">Skill - - Damage - - ArmDiv</div>
-						<div class="item-controls">
-							<!--<a class="item-control item-create" title="Create item" data-type="item"><i class="fas fa-plus"></i> Add</a>-->
-						</div>
-					</li>
+				<table class="items-list">
+					<tr class="bold">
+						<td>Item</td>
+						<td>Attack</td>
+						<td>Skill</td>
+						<td>Parry</td>
+						<td>Block</td>
+						<td>Damage</td>
+						<td>Reach</td>
+						<td>ST</td>
+					</tr>
+					{{log actor.items}}
 					{{#each actor.items as |item id|}}
-					{{#if (or (eq type "Melee-Attack") (eq type "Ranged-Attack") ) }}
-					<li class="item flexrow" data-item-id="{{item._id}}">
-						<div class="item-image"><img src="{{item.img}}" title="{{item.name}}" width="24" height="24" /></div>
-						<div class="item-name">
-							<input type="text" value="{{item.name}}" title="{{item.name}}" style="text-align:left;" />
-						</div>
-						<div class="item-notes">
-							<input type="text" value="{{data.notes}}" title="{{data.notes}}" style="text-align:left;" />
-						</div>
-						{{#if (ne data.level undefined)}}
-						{{#if (or (eq type "Melee-Attack") (eq type "Ranged-Attack") ) }}
-						<div class="item-attack">
-							<label for="data.level" class="fa fa-dice-six rollable" data-level="{{data.level}}"
-								data-label="Attacks with &lt;b&gt;{{name}}&lt;/b&gt;." data-type="skill"></label>
-							{{data.level}} -
-							- <label for="data.damage" class="fa fa-dice-six rollable" data-roll="{{data.damage}}"
-								data-label="Rolls &lt;b&gt;{{data.damageType}}&lt;/b&gt; damage for &lt;b&gt;{{name}}&lt;/b&gt;."
-								data-type="damage"></label>
-							{{data.damage}}
-							<label>{{data.damageType}} -</label>
-							<label>- /{{data.armourDiv}}</label>
-						</div>
-						{{else}}
-						<div class="item-skill">
-							<label for="data.level" class="fa fa-dice-six rollable" data-level="{{data.level}}"
-								data-label="Makes a &lt;b&gt;{{name}}&lt;/b&gt; roll." data-type="skill"></label>
-							{{data.level}}
-						</div>
-						{{/if}}
-						{{else}}
-						<div></div>
-						{{/if}}
-						<div class="item-controls">
-							<a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
-							<a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
-						</div>
-					</li>
-					{{/if}}
+					{{log item}}
+						{{#each item.data.melee as |melee mid|}}
+								<tr>
+									<td>{{item.name}}</td>
+									<td>{{melee.name}}</td>
+									<td>{{melee.skill}}: {{melee.level}}</td>
+									<td>{{melee.parry}}</td>
+									<td>{{melee.block}}</td>
+									<td>{{melee.damage}} {{melee.damageType}} ({{melee.armorDivisor}})</td>
+									<td>{{melee.reach}}</td>
+									<td>{{melee.st}}</td>
+								</tr>
+						{{/each}}
 					{{/each}}
-				</ol>
+				</table>
 			</div>
 
 			{{!-- Items Tab --}}
 			<div id="items" class="tab items" data-tab="items" data-group="primary">
-				<div class="encumbranceTable">
-					<table>
-						<tr class="bold">
-							<td class="title">Level</td><td class="title">Max Load</td><td class="title">Move</td><td class="title">Dodge</td>
-						</tr>
-						{{#each data.encumbrance as |enc id|}}
-						<tr>
-							<td>{{enc.title}}</td>
-							<td>{{enc.lbs}}</td>
-							<td>{{enc.move}}</td>
-							<td>{{enc.dodge}}
-								<label for="enc.dodge" class="fa fa-dice-six rollable" data-level="{{enc.dodge}}"
-								   data-label="Makes a &lt;b&gt;Dodge&lt;/b&gt; roll." data-type="skill"></label>
-							</td>
-						</tr>
-						{{/each}}
-					</table>
-				</div>
 				{{!-- List of Items --}}
 				<ol class="items-list">
 					<li class="item-row bold">
