--- a/templates/item/equipment-sheet.html
+++ b/templates/item/equipment-sheet.html
@@ -70,7 +70,7 @@
             <h3 class="addRow" style="text-align: right;">Add Row</h3>
             <div class="tab">
                 <table>
-                <tr>
+                <tr class="equipment-header">
                     <td class="resource-label">ID</td>
                     <td class="resource-label">Name</td>
                     <td class="resource-label">Level</td>
@@ -84,7 +84,7 @@
                     <td class="resource-label">ST</td>
                 </tr>
                 {{#each data.melee as |melee id|}}
-                <tr>
+                <tr class="equipment-entry">
                     <td class="resource-label">{{id}}</td>
                     <td><input type="text" name="data.melee.{{id}}.name" value="{{name}}" title="{{name}}" style="text-align:left;" /></td>
                     <td class="resource-label">{{melee.level}}</td>
@@ -115,7 +115,7 @@
             <h3 class="addRangedRow" style="text-align: right;">Add Row</h3>
             <div class="tab">
                 <table>
-                    <tr class="rangedRow">
+                    <tr class="equipment-header">
                         <td class="resource-label">ID</td>
                         <td class="resource-label">Name</td>
                         <td class="resource-label">Level</td>
@@ -132,7 +132,7 @@
                         <td class="resource-label">ST</td>
                     </tr>
                     {{#each data.ranged as |ranged id|}}
-                    <tr class="rangedRow">
+                    <tr class="equipment-entry">
                         <td class="resource-label">{{id}}</td>
                         <td><input type="text" name="data.ranged.{{id}}.name" value="{{name}}" title="{{name}}" style="text-align:left;" /></td>
                         <td class="resource-label">{{ranged.level}}</td>
