Fixing div tags on attack tabs

--- a/templates/item/equipment-sheet.html
+++ b/templates/item/equipment-sheet.html
@@ -154,7 +154,7 @@
                     </tr>
                     {{/each}}
                 </table>
-
             </div>
+        </div>
     </section>
 </form>
