Rounding Basic Lift Sw/thr can be entered in the damage field for attacks and it will be properly computed Styling of enc table

--- a/gurps4e.css
+++ b/gurps4e.css
@@ -718,3 +718,14 @@
 	text-align: center;
 	padding: 0 0.5em;
 }
+
+.enc-header td {
+	text-align: center;
+	padding: 0 0.5em;
+	font-weight: bold;
+}
+
+.enc-entry td {
+	text-align: center;
+	padding: 0 0.5em;
+}
