Removing unneeded comment

--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -199,9 +199,7 @@
 										<div class="item-notes">Notes</div>
 										<div class="item-rolls">Roll</div>
 										<div class="item-points">Points</div>
-										<div class="item-controls">
-												<!--<a class="item-control item-create" title="Create item" data-type="item"><i class="fas fa-plus"></i> Add</a>-->
-										</div>
+										<div class="item-controls"></div>
 								</li>
 								{{#each actor.items as |item id|}}
 								{{#if (eq type "Trait") }}
