Ranged attacks now calculate for thr and sw. Fixing issue with game settings.

--- a/templates/item/trait-sheet.html
+++ b/templates/item/trait-sheet.html
@@ -127,7 +127,7 @@
                             <input type="text" name="data.ranged.{{id}}.skillMod" value="{{ranged.skillMod}}" data-dtype="Number"/>
                         </td>
                         <td><input type="text" name="data.ranged.{{id}}.acc" value="{{ranged.acc}}" data-dtype="Number"/></td>
-                        <td><input type="text" name="data.ranged.{{id}}.damage" value="{{ranged.damage}}" title="{{ranged.damage}}" style="text-align:left;" /></td>
+                        <td><input type="text" name="data.ranged.{{id}}.damageInput" value="{{ranged.damageInput}}" title="{{ranged.damageInput}}" style="text-align:left;" /></td>
                         <td><input type="text" name="data.ranged.{{id}}.damageType" value="{{ranged.damageType}}" title="{{ranged.damageType}}" style="text-align:left;" /></td>
                         <td><input type="text" name="data.ranged.{{id}}.armorDivisor" value="{{ranged.armorDivisor}}" title="{{ranged.armorDivisor}}" style="text-align:left;" /></td>
                         <td><input type="text" name="data.ranged.{{id}}.range" value="{{ranged.range}}" title="{{ranged.range}}" style="text-align:left;" /></td>
